[package]
name = "rust-auth-api"
version = "0.1.0"
edition = "2021"
default-run = "rust-auth-api"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br"] }
tower-cookies = "0.10"
tower_governor = { version = "0.4", features = ["axum"] }
rand = "0.8"
moka = { version = "0.12", features = ["future"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-float", "db-postgres"] }

# Auth
bcrypt = "0.15"
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
time = "0.3"

# HTTP client (used by seed_covers binary)
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"